# agentic-ai-agent.bitebase.app

./: .gitignore  Dockerfile  QUICKSTART.md  README.md  alembic.ini  docker-compose.yml  pyproject.toml  requirements.txt  schedule_orchestration.py  setup.py
api/scraping/: route.ts
api/scraping/[jobId]/: route.ts
api/scraping/[jobId]/cancel/: route.ts
api/scraping/[jobId]/results/: route.ts
dashboard/: layout.tsx  metadata.ts  page.tsx
dashboard/analytics/: page.tsx
dashboard/billing/: page.tsx
dashboard/insights/: page.tsx
dashboard/new-project/: page.tsx
dashboard/new-research/: page.tsx
dashboard/profile/: page.tsx
dashboard/project/: page.tsx
dashboard/project/[id]/: page.tsx
dashboard/reports/: page.tsx
dashboard/research/results/: page.tsx
dashboard/settings/: page.tsx
scripts/: backup_database.py  reset_database.py  restore_database.py  setup_database.py
src/: services.py
src/agents/: __init__.py  base_agent.py  chat_tool_functions.py  insights_agent.py  market_agent.py  pricing_agent.py  sales_agent.py  scraping_agent.py  sentiment_agent.py  traffic_agent.py
src/db/: __init__.py  cli.py  config.py  ingest.py  models.py
src/db/migrations/: env.py  init_schema.py
src/functions/: analyze_insights.py  fetch_project_data.py  scraping.py
src/monitoring/: performance_monitor.py
src/orchestration/: agent_orchestrator.py
tests/: conftest.py  fastapi-test-server.py  python_api_tests.py  test_cli.py  test_ingest.py  test_response_naturality.py
tests/db/: test_ingest.py
