[project]
name = "bitebase Intelligence"
version = "0.0.1"
description = "A tool for an AI agent"
authors = [{ name = "Restack Team", email = "service@restack.io" }]
requires-python = ">=3.10"
readme = "README.md"
dependencies = [
    # Database
    "sqlalchemy",
    "alembic",
    "psycopg2-binary",
    "python-dotenv",

    # Scraping
    "playwright",
    "beautifulsoup4",
    "fake-useragent",
    "aiohttp",
    "asyncio",

    # AI/ML
    "langchain",
    "openai",
    "transformers",
    "torch",
    "scikit-learn",
    "restack_ai",

    # CLI
    "click",
    "rich",

    # Utilities
    "python-jose[cryptography]",
    "pydantic",
    "pandas",
    "numpy",
    "requests",
    "httpx",

    # Testing
    "pytest",
    "pytest-asyncio",
    "pytest-cov",

    # Development
    "black",
    "isort",
    "flake8",
    "mypy",

    # Monitoring
    "prometheus-client",
    "sentry-sdk",
    "python-json-logger",
]

[project.scripts]
dev = "src.services:watch_services"
services = "src.services:run_services"

[tool.hatch.build.targets.sdist]
include = ["src"]

[tool.hatch.build.targets.wheel]
include = ["src"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"